# clawfuse

./: .gitignore  CLAUDE.md  README.md  clawfuse.json.example  pyproject.toml
clawfuse/: __init__.py  cache.py  client.py  config.py  dirtree.py  exceptions.py  fuse.py  lifecycle.py  mount.py  token.py  writebuf.py
docs/: ClawFUSE-vs压缩包方案对比报告.md  ClawFUSE-大文件场景优化设计.md  ClawFUSE-性能对比报告.md  ClawFUSE-性能测试报告.md  ClawFUSE-架构设计说明书.md  ClawFUSE-测试报告.md  ClawFUSE-详细设计说明书.md  ClawFUSE-项目进展报告.md  concurrency_test_results.json
scripts/: bench_cold.py  bench_large.py  bench_metadata.py  bench_metadata_cold.py  bench_r1.py  bench_r2.py
tests/: conftest.py  test_cache.py  test_client.py  test_config.py  test_dirtree.py  test_extreme.py  test_fuse.py  test_lazy_load.py  test_lifecycle.py  test_perf.py  test_real_perf.py  test_token.py  test_writebuf.py
