[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawfuse"
version = "0.1.0"
description = "Drive Kit cloud storage FUSE mount for OpenClaw containers"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
fuse = [
    "fusepy>=3.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
clawfuse = "clawfuse.mount:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring real Drive Kit access",
    "perf: performance benchmarks",
]

[tool.mypy]
python_version = "3.10"
strict = true
